@@ -166,7 +166,7 @@ DEFINE_PRINT_FLOATS (double)
 #define ERROR_UNKNOWN_CONVERSION_SPECIFIER 0x33
 
 int
-__pocl_printf_format_full (const OCL_CONSTANT_AS char *restrict format,
+__pocl_printf_format_full (const PRINTF_FMT_STR_AS char *restrict format,
                            param_t *p, va_list ap)
 {
   DEBUG_PRINTF (("[printf:format=%s]\n", format));
@@ -687,7 +687,7 @@ error:;
 int
 __pocl_printf (char *restrict __buffer, uint32_t *__buffer_index,
                uint32_t __buffer_capacity,
-               const OCL_CONSTANT_AS char *restrict fmt, ...)
+               const PRINTF_FMT_STR_AS char *restrict fmt, ...)
 {
   param_t p = { 0 };
 
@@ -717,7 +717,7 @@ extern uint32_t _printf_buffer_capacity;
  * here, so that the kernel library linker pulls them in. */
 
 int
-printf (const OCL_CONSTANT_AS char *restrict fmt, ...)
+printf (const PRINTF_FMT_STR_AS char *restrict fmt, ...)
 {
   param_t p = { 0 };
 
