@@ -434,8 +434,8 @@ poclu_load_program_multidev (cl_context context, cl_device_id *devices,
       snprintf (path, 1024, "%s%s", basename, ext);
       if (access (path, F_OK))
         {
-	  snprintf (path, 1024, "%s/examples/%s/%s%s", SRCDIR, basename,
-		    basename, ext);
+          snprintf (path, 1024, "%s/examples/%s/%s%s", SRCDIR, basename,
+                    basename, ext);
           if (access (path, F_OK))
             {
               fprintf (stderr, "Can't find %s%s SPIR / PoCLbin file in %s.\n",
